@@ -20,3 +20,4 @@ Thejaka Amila Jayasekara <thejkane@iu.edu>
 Paul Springer <paul.springer@rwth-aachen.de>
 Frank Winkler <winklerf@ornl.gov>
 Matthias Zöllner <zoellner@rbg.informatik.tu-darmstadt.de>
+Tomotake Nakamura <tonakamura@jp.fujitsu.com>
