@@ -15,7 +15,7 @@
 ## Copyright (c) 2009-2013,
 ## University of Oregon, Eugene, USA
 ##
-## Copyright (c) 2009-2013,
+## Copyright (c) 2009-2014,
 ## Forschungszentrum Juelich GmbH, Germany
 ##
 ## Copyright (c) 2009-2013,
@@ -149,3 +149,12 @@ else !HAVE_GETHOSTID
 libscorep_platform_la_SOURCES += $(SRC_ROOT)src/services/platform/scorep_platform_nodeid_mockup.c
 endif !HAVE_GETHOSTID
 endif PLATFORM_FX10
+
+if PLATFORM_FX100
+libscorep_platform_la_SOURCES += $(SRC_ROOT)src/services/platform/scorep_platform_system_tree_generic.c
+if HAVE_GETHOSTID
+libscorep_platform_la_SOURCES += $(SRC_ROOT)src/services/platform/scorep_platform_nodeid_gethostid.c
+else !HAVE_GETHOSTID
+libscorep_platform_la_SOURCES += $(SRC_ROOT)src/services/platform/scorep_platform_nodeid_mockup.c
+endif !HAVE_GETHOSTID
+endif PLATFORM_FX100
